--- a/puma/index.html
+++ b/puma/index.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>PUMA Clone</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>PUMA Clone</title>
 </head>
 <body>
 
-<header class="header-area"></header>
-<section class="section-area"></section>
-<footer class="footer-area"></footer>
+  <div class="wrap">
+    <header class="header-area">
+      <div class="util-menu">
+        <ul>
+          <li><a href="#">로그인</a></li>
+          <li><a href="#">회원가입</a></li>
+          <li><a href="#">주문조회</a></li>
+          <li><a href="#">고객센터</a></li>
+          <li><a href="#">대한민국</a></li>
+        </ul>
+      </div><!-- util-menu END -->
+
+      <nav class="gnb">
+        <ul>
+          <li><a href="#">MEN</a></li>
+          <li><a href="#">WOMEN</a></li>
+          <li><a href="#">KIDS</a></li>
+          <li><a href="#">SPORTS</a></li>
+          <li><a href="#">COLLECTION</a></li>
+          <li><a href="#">NEW</a></li>
+          <li><a href="#">SALE</a></li>
+        </ul>
+      </nav><!-- gnb END -->
+    </header><!-- header-area END -->
+
+    <div class="visual-area">
+
+    </div><!-- visual-area END -->
+
+    <div class="contents-area">
+      <section class="section trending-now">
+
+      </section>
+
+      <section class="section shop-puma">
+
+      </section>
+
+      <section class="section puma-sports">
+
+      </section>
+
+      <section class="section puma-sports-style">
+
+      </section>
+
+      <section class="section puma-select">
+
+      </section>
+
+      <section class="section puma-story">
+
+      </section>
+    </div><!-- contents-area END -->
+
+    <footer class="footer-area">
+
+    </footer><!-- footer-area END -->
+  </div>
 
 
 
